desci-server/kubernetes/wildcard_preview_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-preview-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:523044037273:certificate/e539d795-e5e7-43a6-a572-4f67bc98a625
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: preview-router
spec:
  ingressClassName: alb
  rules:
    - host: '*.nodes-api-dev.desci.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: preview-router-service
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview-router
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preview-router
  template:
    metadata:
      labels:
        app: preview-router
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
              readOnly: false
      volumes:
        - name: config-volume
          configMap:
            name: preview-router-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: preview-router-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: preview-router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
